[project]
name = "rl-filler"
version = "0.1.0"
description = "Flood-It AI: Deep Reinforcement Learning game with PPO"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "gymnasium>=0.29.0",
    "stable-baselines3>=2.1.0",
    "numpy>=1.24.0",
    "shimmy>=0.2.0",
    "ruff>=0.14.8",
]

[project.scripts]
train = "backend.training.train:main"

[tool.ruff]
indent-width = 2

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B"]
ignore = ["B011"]
